<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">atdApp</string>
    <string name="title">Au Temps Donne</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="scanner">Scanner</string>
    <string name="scan_result">Scan Result</string>
    <string name="loginError">Incorrect email or password!</string>
    <string name="delete">Delete</string>
    <string name="new_scan">Scan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nfc">NFC</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="logout">Logout</string>
    <string name="logoutConfirm">Are you sure you want to logout?</string>
    <string name="system">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="choose_language">Choose a language</string>
    <string name="choose_mode">Choose a mode</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="french">french</string>
    <string name="english">english</string>
    <string name="home_title">Welcome to Au Temps Donné</string>
    <string name="failureLogin">Email or password incorrect!</string>
    <string name="failureLoginDone">oops</string>
    <string name="failureLoginTitle">Login Error</string>
    <string name="failureRequest">A connection error has occurred</string>
    <string name="home_text">The humanitarian association Au Temps Donné was created in 1987 in the department of the Aisne, in Saint Quentin in response to the industrial crisis that struck the region. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="successVisit">Thank you for your visit!</string>
    <string name="successTitleVisit">It\'s good</string>
    <string name="close">close</string>
    <string name="failureVisitDesc">This person does not need to be visited</string>
    <string name="error">Error</string>
    <string name="visit">visit</string>
    <string name="goodWrite">Everything is fine</string>
    <string name="badWrite">Oops, something went wrong</string>
    <string name="visitTitle">List of people visited</string>
    <string name="listActivitiesTitle">List of your activities</string>
    <string name="planning">Activities</string>
</resources>