<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScannerFragment">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/fab"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/qr_code"
            android:padding="20dp"
            android:background="@drawable/rounded_button"
            app:tint="@color/white"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="48dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/textResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/scan_result"
            android:gravity="center"
            android:textSize="18sp"
        />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:paddingBottom="64dp"
            android:paddingHorizontal="32dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/supp_button"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:background="@drawable/delete_button"
            android:layout_gravity="bottom"
            android:visibility="gone"
            android:textColor="@color/white"
            android:text="@string/delete"
        />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/newScan_button"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom|end"
            android:background="@drawable/new_scan"
            android:padding="8dp"
            android:text="@string/new_scan"
            android:textColor="@color/white"
            android:visibility="gone" />
        </FrameLayout>

</FrameLayout>

</FrameLayout>